portfolio overlay added

--- a/index.html
+++ b/index.html
@@ -104,16 +104,19 @@
                     <a class="link about-link" href="">
                         <img src="images/what-we-do/img1optimized.jpg" alt="человек набирает код" width="370" height="294">
                     </a>
+                    <p class="about-item-text">десктопні додатки</p>
                 </li>
                 <li class="about-item">
                     <a class="link about-link" href="">
                         <img src="images/what-we-do/img2optimized.jpg" alt="человек разрабатывает дизайн" width="370" height="294">
                     </a>
+                    <p class="about-item-text">мобільні додатки</p>
                 </li>               
                 <li class="about-item">
                     <a class="about-link" href="">
                         <img src="images/what-we-do/img3optimized.jpg" alt="человек работает с палитрой" width="370" height="294">
                     </a>
+                    <p class="about-item-text">дизайнерські рішення</p>
                 </li>                
             </ul>
             </div>
