--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                             <a class="link navigation-link" href="index.html">Студія</a>
                         </li>
                         <li class="navigation-item">
-                            <a class="link navigation-link" href="portfolio.html">Портфоліо</a>
+                            <a class="link navigation-link portfolio" href="portfolio.html">Портфоліо</a>
                         </li>
                         <li class="navigation-item">
                             <a class="link navigation-link" href="">Контакти</a>
